# autora-theorist-SAME

./: LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: test-pytest.yml
challenge/: theorist_benchmarking.ipynb
docs/: Additional Example.ipynb  Basic Usage.ipynb  index.md  quickstart.md
src/autora/: expression_checker.py  expressions_generation_func.py
src/autora/theorist/autora_theorist_same/: __init__.py
tests/: test_autora_theorist_same.py
