[project]
# UPDATE THIS BEFORE PUBLISHING
name = "autora_theorist_same"
description = "Equation Discovery Method for the autora-theorist-SAME group"
authors = [{ name = "Anish HS", email = "anishprastuth@gmail.com" }]
dynamic = ["version"]

readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8,<4"

# ADD NEW DEPENDENCIES HERE
dependencies = [
    "autora-core",
    "scikit-learn",
]

[project.optional-dependencies]
dev = [
    "autora-core[dev]"
]

[project.urls]
homepage = "http://www.empiricalresearch.ai"
repository = "https://github.com/anishhs001/autora-theorist-SAME"
documentation = "https://autoresearch.github.io/autora/"


[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
